로그설정, 패스워드 비암호화 설정, 로그인회원가입시 에러 메시지 출력 및 회원정보리스트 작업중

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -18,6 +18,10 @@
                     <div class="card-body">
                         <!-- Login form-->
                         <form class="user" th:action="@{/login_proc}" method="post">
+                            <div th:if="${error}">
+                                <p id="valid" class="alert alert-danger" th:text="${exception}"></p>
+                            </div>
+
                             <!-- Form Group (email address)-->
                             <div class="mb-3">
                                 <label class="small mb-1" for="userId">아이디</label>
