--- a/src/main/resources/templates/account/register.html
+++ b/src/main/resources/templates/account/register.html
@@ -25,12 +25,13 @@
                         <div class="card-header justify-content-center"><h3 class="fw-light my-4">회원가입</h3></div>
                         <div class="card-body">
                             <!-- Registration form-->
-                            <form class="user" th:action="@{/register}" method="post">
+                            <form class="user" th:action="@{/register}" method="post" th:object="${accountForm}">
                                 <!-- Form Row-->
                                 <!-- Form Group (first name)-->
                                 <div class="mb-3">
                                     <label class="small mb-1" for="userId">아이디</label>
-                                    <input class="form-control" id="userId" name="userId" type="text" placeholder="아이디를 입력해주세요.">
+                                    <input class="form-control" id="userId" name="userId" th:field="*{userId}" type="text" placeholder="아이디를 입력해주세요.">
+                                    <p style="color: #bd2130; font-size: small;" th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}" >Incorrect UserId</p>
                                 </div>
     <!--                        <div class="col-md-6">-->
                                 <!-- Form Group (last name)-->
@@ -48,7 +49,8 @@
                                 <!-- Form Group (password)-->
                                 <div class="mb-3">
                                     <label class="small mb-1" for="userPw">Password</label>
-                                    <input class="form-control" id="userPw" name="userPw" type="password" placeholder="비밀번호를 입력해주세요.">
+                                    <input class="form-control" id="userPw" name="userPw" th:field="*{userPw}" type="password" placeholder="비밀번호를 입력해주세요.">
+                                    <p style="color: #bd2130; font-size: small;" th:if="${#fields.hasErrors('userPw')}" th:errors="*{userPw}" >Incorrect UserId</p>
                                 </div>
     <!--                        <div class="col-md-6">-->
                                 <!-- Form Group (confirm password)-->
