--- a/src/main/resources/templates/account/account_list.html
+++ b/src/main/resources/templates/account/account_list.html
@@ -26,17 +26,17 @@
         }
 
         function clickPageFn(event) {
-            let page;
+            let curPageNum;
             let activePageNm = parseInt($(".page-item.active")[0].innerText);
 
             if (event.innerText == 'Next') {            // Next 버튼 클릭 시
-                page = activePageNm + 1;
+                curPageNum = activePageNm + 1;
             } else if (event.innerText == 'Previous') { // Previous 버튼 클릭 시
-                page = activePageNm - 1;
+                curPageNum = activePageNm - 1;
             } else {                                    // 일반 버튼 클릭 시
-                page = event.innerText;
+                curPageNum = event.innerText;
             }
-            param = {page : page}
+            let param = {page : curPageNum}
             getCrawlLogData(param);
         }
 
@@ -80,14 +80,14 @@
 
             
             // Previous 버튼 세팅 > 현재 페이지가 1 이라면 disabled
-            if ('1' == data.page) {
+            if ('1' == data.curPageNum) {
                 tags.push("<li class='page-item disabled' ><a class='page-link' id='pagePrevClick'>Previous</a></li>")
             } else {
                 tags.push("<li class='page-item' ><a class='page-link' id='pagePrevClick'>Previous</a></li>")
             }
             
             for (let i = data.curGrpFirstPageNm ; i <= data.curGrpLastPageNm; i++) {
-                if (i == data.page) {
+                if (i == data.curPageNum) {
                     tags.push("<li class='page-item active' id='pageClick'><a class='page-link'>"+ i +"</a></li>")
                 } else {
                     tags.push("<li class='page-item' id='pageClick'><a class='page-link' id='pageClick'>"+ i +"</a></li>")
@@ -95,7 +95,7 @@
             }
 
             // Next 버튼 세팅 > 현재 페이지가 총페이지라면 disabled
-            if (data.totPageCnt == data.page) {
+            if (data.totPageCnt == data.curPageNum) {
                 tags.push("<li class='page-item disabled' ><a class='page-link' id='pageNextClick'>Next</a></li>")    
             } else {
                 tags.push("<li class='page-item' ><a class='page-link' id='pageNextClick'>Next</a></li>")
