--- a/src/main/resources/templates/tables.html
+++ b/src/main/resources/templates/tables.html
@@ -20,24 +20,24 @@
 
         function init() {
             let param = {
-                currentPageNum : 1
+                curPageNum : 1
             };
             getCrawlLogData(param);
         }
 
         function clickPageFn(event) {
-            let currentPageNum;
+            let curPageNum;
             let activePageNm = parseInt($(".page-item.active")[0].innerText);
             console.log("## activePageNm ##", activePageNm);
 
             if (event.innerText == 'Next') {            // Next 버튼 클릭 시
-                currentPageNum = activePageNm + 1;
+                curPageNum = activePageNm + 1;
             } else if (event.innerText == 'Previous') { // Previous 버튼 클릭 시
-                currentPageNum = activePageNm - 1;
+                curPageNum = activePageNm - 1;
             } else {                                    // 일반 버튼 클릭 시
-                currentPageNum = event.innerText;
+                curPageNum = event.innerText;
             }
-            param = {currentPageNum : currentPageNum}
+            param = {curPageNum : curPageNum}
             getCrawlLogData(param);
         }
 
@@ -78,17 +78,16 @@
             $("#pgDiv").empty();
 
             let tags = [];
-
-            
+            console.log("## data.curPageNum ##", data.curPageNum);
             // Previous 버튼 세팅 > 현재 페이지가 1 이라면 disabled
-            if ('1' == data.currentPageNum) {
+            if ('1' == data.curPageNum) {
                 tags.push("<li class='page-item disabled' ><a class='page-link' id='pagePrevClick'>Previous</a></li>")
             } else {
                 tags.push("<li class='page-item' ><a class='page-link' id='pagePrevClick'>Previous</a></li>")
             }
             
             for (let i = data.curGrpFirstPageNm ; i <= data.curGrpLastPageNm; i++) {
-                if (i == data.currentPageNum) {
+                if (i == data.curPageNum) {
                     tags.push("<li class='page-item active' id='pageClick'><a class='page-link'>"+ i +"</a></li>")
                 } else {
                     tags.push("<li class='page-item' id='pageClick'><a class='page-link' id='pageClick'>"+ i +"</a></li>")
@@ -96,7 +95,7 @@
             }
 
             // Next 버튼 세팅 > 현재 페이지가 총페이지라면 disabled
-            if (data.totPageCnt == data.currentPageNum) {
+            if (data.totPageCnt == data.curPageNum) {
                 tags.push("<li class='page-item disabled' ><a class='page-link' id='pageNextClick'>Next</a></li>")    
             } else {
                 tags.push("<li class='page-item' ><a class='page-link' id='pageNextClick'>Next</a></li>")
