--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -96,8 +96,15 @@
     <!-- Nav Item - Charts -->
     <li class="nav-item">
         <a class="nav-link" th:href="@{/account/list}">
-            <i class="fa-solid fa-user"></i>
+            <i class="fas fa-comments fa-2x text-gray-300"></i>
             <span>유저정보</span>
+        </a>
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link" th:href="@{/slot/list}">
+            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+            <span>슬롯관리</span>
         </a>
     </li>
 
