--- a/src/main/resources/templates/account/account_detail.html
+++ b/src/main/resources/templates/account/account_detail.html
@@ -14,7 +14,59 @@
     $(document).ready(function() {
         $id = $("#id").val();
         console.log("## $id ##", $id);
+
+        getData($id);
+
+        $("#updateBtn").click(function() {
+            let remark = $("#remark").val();
+            let role = $("input[name='role']:checked").val();
+
+            let param = {id : $id, remark : remark, role : role};
+
+            $.ajax({
+                url: "/api/account/detail",
+                data: param,
+                type: 'POST',
+                success: function(data) {
+                    if (data) {
+                        alert("변경이 완료되었습니다.");
+                        getData($id);
+                    } else {
+                        alert("변경이 실패되었습니다.");
+                    }
+                },
+            }).done(function (data){
+                
+            });
+        });
     });
+
+    function getData(param) {
+        let params = {id : param};
+        
+        $.ajax({
+            url: "/api/account/detail",
+            data: params,
+            type: 'GET',
+            success: function(data) {
+                $("#id").val(data.id);
+                $("#userId").val(data.userId);
+                $("#userPw").val(data.userPw);
+                $("#agency").val(data.agency);
+                $("#remark").val(data.remark);
+                if (data.role == 'ROLE_USER') {
+                    $("#roleUser").prop("checked", true);
+                    $("#roleManager").prop("checked", false);
+                } else {
+                    $("#roleManager").prop("checked", true);
+                    $("#roleUser").prop("checked", false);
+                }
+            },
+        }).done(function (data){
+            
+        });
+
+    }
 </script>
 
     <!-- Page Wrapper -->
@@ -74,21 +126,21 @@
                                         <br>
 
                                         <div class="form-check">
-                                            <input th:checked="${role eq 'ROLE_USER'}" class="form-check-input" type="radio" name="flexRadioDefault" id="ROLE_USER">
-                                            <label class="form-check-label" for="ROLE_USER">
+                                            <input th:checked="${role eq 'ROLE_USER'}" class="form-check-input" type="radio" name="role" id="roleUser" value="ROLE_USER">
+                                            <label class="form-check-label" for="roleUser">
                                                 유저
                                             </label>
                                         </div>
                                         <div class="form-check">
-                                            <input th:checked="${role eq 'ROLE_MANAGER'}" class="form-check-input" type="radio" name="flexRadioDefault" id="ROLE_MANAGER">
-                                            <label class="form-check-label" for="ROLE_MANAGER">
+                                            <input th:checked="${role eq 'ROLE_MANAGER'}" class="form-check-input" type="radio" name="role" id="roleManager" value="ROLE_MANAGER">
+                                            <label class="form-check-label" for="roleManager">
                                                 매니저
                                             </label>
                                         </div>
                                         <br>
 
                                         <!-- Save changes button-->
-                                        <button class="btn btn-primary" type="button">변경</button>
+                                        <a class="btn btn-primary" type="button" id="updateBtn">변경</a>
                                     </form>
                                 </div>
                             </div>
